# E-commerce

./: .gitignore  Cargo.toml  README.md  env_example  todo.md
backend/: Cargo.toml  README.md
backend/database_setup/: init.sql
backend/src/: lib.rs  main.rs
backend/src/database/: address.rs  category.rs  customer.rs  customer_and_address.rs  product.rs  product_review.rs  sale.rs  subcategory.rs
backend/src/routes/: login.rs  mod.rs  register.rs  users.rs
backend/src/routes/customer/: address.rs
backend/src/routes/items/: list_items.rs
backend/src/routes/reviews/: list.rs  mod.rs  new_review.rs
backend/src/utils/: app_error.rs  app_state.rs  custom_middleware.rs  hash.rs  jwt.rs  mod.rs
database_setup/: init.sql
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs  router.rs
frontend/src/components/: mod.rs  navbar.rs
frontend/src/components/pages/: contact.rs  dashboard.rs  home.rs  mod.rs  products.rs
frontend/src/css/: style.css
frontend/src/routes/: about.rs  home.rs  mod.rs  products.rs  review.rs
frontend/templates/: about.html  base.html  index.html  navbar.html  products.html  review.html
src/: lib.rs  main.rs
src/database/: address.rs  categories.rs  colors.rs  customer.rs  customer_and_address.rs  mod.rs  prelude.rs  product.rs  product_review.rs  sale_and_product.rs  sizes.rs  status_update.rs
src/routes/: mod.rs
src/routes/admin_backend/: create_products.rs  mod.rs
src/routes/backend/: logout.rs  mod.rs
src/routes/backend/items/: list_items.rs  mod.rs
src/routes/backend/reviews/: mod.rs  new_review.rs
src/routes/frontend/: contact.rs  handlers.rs  mod.rs  shop.rs
src/utils/: custom_frontend_middleware.rs  mod.rs
templates/: base.html  cart.html  checkout.html  contact.html  detail.html  index.html  shop.html
templates/components/: footer.html  navbar.html  products.html  thankyou.html  topbar.html
