[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
stylist = { version = "0.13.0", features = ["yew", "parser"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
