[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["serde", "serde-json"] }
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net"] }
